--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
     "start": "meteor run"
   },
   "dependencies": {
-    "babel-runtime": "^6.20.0",
+    "babel-runtime": "^6.23.0",
     "d3": "^3.5.17",
-    "meteor-node-stubs": "~0.2.4",
-    "prop-types": "^15.5.8",
+    "d3-geo-projection": "^0.2.16",
+    "meteor-node-stubs": "^0.2.6",
+    "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-addons-pure-render-mixin": "^15.5.2",
     "react-dom": "^15.5.4",
-    "twitter": "^1.7.0",
-    "d3-geo-projection": "^0.2.16",
-    "topojson": "^1.6.27"
+    "topojson": "^1.6.27",
+    "twitter": "^1.7.0"
   }
 }
